# swh-graph

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  CONTRIBUTORS  Cargo.toml  MANIFEST.in  Makefile  Makefile.local  PKG-INFO  README.md  README.rst  conftest.py  example-config.yml  example_config.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-luigi.txt  requirements-swh-export.txt  requirements-swh-luigi.txt  requirements-swh-test.txt  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  swh.graph_0.5.0.orig.tar.gz.id  swh.graph_0.5.1.orig.tar.gz.id  swh.graph_0.5.2.orig.tar.gz.id  tox.ini
_custom_build/: graph_build.py
api/client/: .gitignore  README.md  requirements-swh.txt  requirements.txt  setup.py  tox.ini
api/docs/: api.rst
api/server/: README.md  pom.xml
compression/: Dockerfile  compress_graph.sh
debian/: .gitignore  changelog  control  copyright  gbp.conf  rules
debian/patches/: 0001-Don-t-fail-teardown-if-the-server-is-already-dead.patch  series
docker/: Dockerfile  build.sh  run.sh
dockerfiles/: Dockerfile
dockerfiles/configuration/: logback.xml
dockerfiles/scripts/: compress_graph.sh
docs/: Makefile  Makefile.local  README.rst  api.rst  cli.rst  compression.rst  docker.rst  example-dataset.rst  fuse.rst  git2graph.md  glossary.rst  grpc-api.rst  index.rst  java-api.rst  luigi.rst  memory.rst  provenance-index.rst  quickstart.rst  rust-design-tips.rst  testing.rst  use-cases.rst
docs/images/: .gitignore  Makefile  compression_steps.dot  example-dataset.dot  graph_layers.dot  layers.dot  node_relations.dot
extension/: Cargo.toml
extension/src/: lib.rs
grpc-server/: Cargo.toml  README.md  build.rs
grpc-server/proto/: swhgraph.proto
grpc-server/src/: filters.rs  find_path.rs  graph.rs  label_builder.rs  lib.rs  main.rs  metrics.rs  node_builder.rs  sentry.rs  statsd.rs  traversal.rs  utils.rs  visitor.rs
grpc-server/tests/: server.rs
java/: .coding-style.xml  README.md  pom.xml
java/server/: .clang-format  README.md  pom.xml
proto/: swhgraph.proto
pyo3/: Cargo.toml  pyproject.toml
pyo3/src/: lib.rs
reports/: .gitignore
rust/: Cargo.toml  README.md  build.rs  crash_course.md  tutorial.md
rust/examples/: bfs.rs  bfs_labels.rs  compare-graphs.rs
rust/src/: _crash_course.rs  _tutorial.rs  approximate_bfs.rs  arc_iterators.rs  cli.rs  graph.rs  graph_builder.rs  impl.rs  labeling.rs  labels.rs  lib.rs  mph.rs  permutation.rs  person.rs  properties.rs  serde.rs  stats.rs  swhid.rs  swhtype.rs  underlying_graph.rs
rust/src/algos/: mod.rs  root_directory.rs
rust/src/collections/: mod.rs  node_set.rs  paths.rs
rust/src/compress/: bv.rs  iter_arcs.rs  iter_fullnames.rs  iter_labeled_arcs.rs  iter_labels.rs  iter_origins.rs  iter_persons.rs  iter_swhids.rs  label_names.rs  list_swhids.rs  maps.rs  mod.rs  mph.rs  orc.rs  persons.rs  properties.rs  stats.rs  transform.rs  zst_dir.rs
rust/src/front_coded_list/: mod.rs  read.rs  write.rs
rust/src/java_compat/: bit_vector.rs  fcl.rs  mod.rs
rust/src/java_compat/mph/: gov.rs  mod.rs
rust/src/java_compat/sf/: gov3.rs  mod.rs
rust/src/map/: mod.rs  node2swhid.rs  node2type.rs  order.rs  permutation.rs
rust/src/properties/: contents.rs  label_names.rs  maps.rs  mod.rs  persons.rs  strings.rs  timestamps.rs  utils.rs
rust/src/server/: filters.rs  find_path.rs  mod.rs  node_builder.rs  traversal.rs  visitor.rs
rust/src/stdlib/: fs.rs  mod.rs  root_directory.rs  vcs.rs  visit.rs
rust/src/utils/: atomic_file.rs  exhaustiveiterator.rs  mmap.rs  mod.rs  progress_logger.rs  shuffle.rs  sort.rs
rust/src/utils/dataset_writer/: ipc.rs  mod.rs  parquet.rs
rust/src/utils/sort/: arcs.rs  mod.rs  strings.rs  swhids.rs
rust/src/views/: dynamic.rs  mod.rs  spy.rs  subgraph.rs  symmetric.rs  transposed.rs  webgraph.rs
rust/src/views/contiguous_subgraph/: contents.rs  iterators.rs  label_names.rs  maps.rs  mod.rs  persons.rs  strings.rs  timestamps.rs
rust/src/views/spy/: contents.rs  label_names.rs  maps.rs  mod.rs  persons.rs  strings.rs  timestamps.rs
rust/tests/: algos.rs  bit_vector.rs  compress_label_names.rs  contiguous_subgraph.rs  gov.rs  graph.rs  graph_builder.rs  graph_builder_from_spy.rs  label_name_order.rs  person.rs  properties.rs  server.rs  sort.rs  stdlib.rs  subgraph.rs  subgraph_symmetric.rs  symmetric.rs  test_label_iterators.rs  test_node2swhid.rs  test_node2type.rs  test_order_mph.rs  test_swhid.rs  transposed.rs  utils.rs  vec_graph.rs  webgraph_adapter.rs
rust/tests/data/: mod.rs
stdlib-rs/: Cargo.toml
stdlib-rs/src/: connectivity.rs  diff.rs  fs.rs  lib.rs  root_directory.rs  small_node_set.rs  vcs.rs  visit.rs
stdlib-rs/src/collections/: mod.rs  node_multimap.rs  node_set.rs  paths.rs  small_node_set.rs
stdlib-rs/tests/: connectivity.rs  small_node_set.rs  stdlib.rs  test_node_multimap.rs
stdlib-rs/tests/data/: mod.rs
swh/: __init__.py
swh.graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/: dir2graph  pid2int2int2pid.sh  run_e2e_check.py  run_e2e_test.py  swh-graph-java2rust.sh  swhid2int2int2swhid.sh
tools/aggregate/: Cargo.toml
tools/aggregate/src/: lib.rs
tools/contributions/: Cargo.toml
tools/contributions/src/: contributor_set.rs  lib.rs  year_set.rs
tools/file_names/: Cargo.toml
tools/file_names/src/: lib.rs
tools/id2fullname/: Cargo.toml
tools/id2fullname/src/: lib.rs
tools/provenance/: Cargo.toml
tools/provenance/src/: contents_in_directories.rs  contents_in_revisions.rs  csv_dataset.rs  dataset_writer.rs  directories_in_revisions.rs  earliest_revision.rs  filters.rs  frontier.rs  frontier_set.rs  lib.rs  node_dataset.rs  revisions_in_origins.rs  x_in_y_dataset.rs
tools/provenance/src/dataset_writer/: ipc.rs  mod.rs  parquet.rs
tools/provenance/tests/: earliest_revision.rs  frontier.rs
tools/subgrapher/: Cargo.toml  README.md
tools/subgrapher/src/: lib.rs  main.rs
tools/subgrapher/tests/: tests.rs
tools/topology/: Cargo.toml
tools/topology/src/: generations.rs  lib.rs
(+548 files in other folders)
