[workspace]

resolver = "2"

members = [
    "pyo3",
    "rust",
    "grpc-server",
    "tools/counters",
    "tools/subgrapher",
]

[workspace.package]
repository = "https://gitlab.softwareheritage.org/swh/devel/swh-graph"
license = "GPL-3.0-or-later"
version = "9.0.2"

[workspace.dependencies]
anyhow = { version="1.0.79", features=["backtrace"] }
dsi-bitstream = "0.5.0"
epserde = "0.11.1"
itertools = { version = "0.11.0" }
lender = "0.4.2"
mmap-rs = "0.6.1"
swh-graph = { version = "9.0.0", path = "./rust/" }
value-traits = "0.2.0"
webgraph = "0.5.0"
webgraph-algo = "0.5.0"
webgraph-cli = "0.3.0"
sux = "0.10.0"

# CLI
env_logger = "0.11.5"
clap = { version = "4.1.6", features = ["derive"] }
dsi-progress-logger = "0.8.0"
log = "0.4.17"


[profile.release] # Used for the examples
opt-level = 3             # like --release
lto = "fat"               # Full LTO
overflow-checks = false   # Disable integer overflow checks.
debug = true              # Include debug info.
debug-assertions = false  # Disables debug assertions.
codegen-units=1           # slower compile times, but maybe better perf
