[package]
name = "swh-graph-grpc-server"
version.workspace = true
edition = "2021"
description = "gRPC server for the fast queries to the Software Heritage archive graph, using a compressed in-memory representation"
repository = "https://gitlab.softwareheritage.org/swh/devel/swh-graph"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["software-heritage", "graph", "webgraph", "grpc"]
categories = ["compression", "science"]
rust-version = "1.79"

[dependencies]
anyhow.workspace = true
itertools.workspace = true
java-properties = "1.4.1"

# CLI & logging
clap.workspace = true
chrono = "0.4.31"
env_logger.workspace = true
log.workspace = true

# gRPC
prost = "0.12"
prost-types = "0.12"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
tonic-middleware = "0.1.4"

# serde
serde_json = "1.0"
serde = "1.0.189"
serde_derive = "1.0.189"

# Tokio & async
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# swh-graph
swh-graph = { path = "../rust/", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
futures = "0.3.30"

[[bin]]
name = "swh-graph-grpc-serve"
path = "src/main.rs"
