[package]
name = "swh_graph_pyo3"
description = "Python binding for swh-graph-rs"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swh_graph_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
swh-graph = { path = "../rust/" }
