[package]
name = "swh-graph-stdlib"
edition = "2021"
description = "Library of algorithms and data structures for swh-graph"
repository.workspace = true
license.workspace = true
keywords = ["software-heritage", "graph", "compression", "webgraph"]
categories = ["compression", "science"]
version.workspace = true

[dependencies]
anyhow.workspace = true
dsi-bitstream.workspace = true
epserde.workspace = true
itertools.workspace = true
log.workspace = true
rapidhash = "1.4.0"
sux = "0.7.2"
swh-graph.workspace = true

[dev-dependencies]
tempfile = "3.7.1"
