[package]
name = "swh_graph_aggregate"
description = "Tool to aggregate datasets on contents into a single one."
version.workspace = true
edition = "2021"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
arrow = { version = "52.0" }
byteorder = "1.4.3"
clap = { version = "4.1.6", features = ["derive"] }
chrono = { version = "0.4.31" }
dataset-writer = { version = "1.1.0", features = ["parquet"] }
dsi-progress-logger = "0.2.4"
env_logger = "0.11.5"
itertools = { version = "0.11.0" }
log = "0.4.17"
parquet = { version = "52.0.0", default-features = false, features = ["arrow", "zstd"] }
rayon = { version = "1.9.0" }
sux = "0.4.1"
swh_graph_file_names = { path = "../file_names" }
swh-graph = { path = "../../rust/" }
zstd = "0.12"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
