[package]
name = "swh_graph_file_names"
description = "Collection of filename analysis utilities based on swh-graph"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dsi-progress-logger = "0.2.3"
itertools = { version = "0.11.0" }
log = "0.4.17"
rayon = { version = "1.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
stderrlog = "0.5.4"
swh-graph = { path = "../../rust/", features = ["dataset-writer", "serde"] }
