[package]
name = "id2fullname"
description = "Tool to map an author ID to its corresponding full name in the SWH graph"
edition = "2021"
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64-simd = "0.8.0"
clap.workspace = true
csv = "1.3.0"
epserde = "0.8.0"
mmap-rs = "0.6.1"
sux.workspace = true

[[bin]]
name = "id2fullname"
