[package]
name = "swh_graph_provenance"
description = "Collection of provenance analysis utilities based on swh-graph"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
bytemuck = { version = "1.14.0" }
byteorder = "1.4.3"
chrono = "0.4.31"
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dsi-progress-logger = "0.2.0"
log = "0.4.17"
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5.4"
sux = "0.2.0"
swh-graph = { path = "../../rust/", features = ["serde"] }

[[bin]]
name = "find-earliest-revision"
