[package]
name = "swh_graph_provenance"
description = "Collection of provenance analysis utilities based on swh-graph"
version.workspace = true
edition = "2021"

[dependencies]
ar_row = { git = "https://gitlab.softwareheritage.org/swh/devel/ar_row-rs.git", rev = "9602b1677253c0b491b4e273afaeda4ffb37a4d9" }
ar_row_derive = { git = "https://gitlab.softwareheritage.org/swh/devel/ar_row-rs.git", rev = "9602b1677253c0b491b4e273afaeda4ffb37a4d9" }
arrow = { version = "50.0.0", default-features = false }
anyhow = {version="1.0.71", features=["backtrace"]}
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc"] }
byteorder = "1.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dsi-progress-logger = "0.2.3"
log = "0.4.17"
parquet = { version = "50.0.0", default-features = false, features = ["arrow", "zstd"] }
rayon = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
stderrlog = "0.5.4"
sux = "0.4.1"
swh-graph = { path = "../../rust/", features = ["parquet", "serde", "dataset-writer"] }
thread_local = "1.1.7"
zstd = "0.12"

rand = "0.8.5"
sha1 = "0.10.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "find-earliest-revision"
