[package]
name = "swh_graph_provenance"
description = "Collection of provenance analysis utilities based on swh-graph"
version.workspace = true
edition = "2021"

[dependencies]
ar_row = "1.1.0"
ar_row_derive = "1.1.0"
arrow = { version = "53.1.0", default-features = false }
anyhow = {version="1.0.71", features=["backtrace"]}
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc"] }
byteorder = "1.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dataset-writer = { version = "1.1.0", features = ["parquet"] }
dsi-progress-logger = "0.2.4"
log = "0.4.17"
parquet = { version = "53.1.0", default-features = false, features = ["arrow", "zstd"] }
rayon = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
env_logger = "0.11.5"
sux = "0.4.1"
swh-graph = { path = "../../rust/", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "find-earliest-revision"
