[package]
name = "swh_graph_topology"
description = "Collection of topology analysis utilities based on swh-graph"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
bytemuck = { version = "1.14.0" }
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dsi-bitstream.workspace = true
dsi-progress-logger.workspace = true
itertools = { version = "0.11.0" }
log = "0.4.17"
mmap-rs = "0.6.1"
rayon = { version = "1.9.0" }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
rdst = { version  ="0.20.14", features = ["multi-threaded"] }
swh-graph = { workspace = true, features = ["serde"] }

# arrow
arrow = { version = ">=53.1.0,<57", optional = true }
dataset-writer = { version = "1.0.1", optional = true, features = ["parquet"] }
parquet = { version = ">=53.1.0,<57", optional = true, default-features = false, features = ["arrow", "zstd"] }

[features]
arrow = ["dep:arrow", "dataset-writer", "parquet"]

[[bin]]
name = "toposort"

[[bin]]
name = "edges"
required-features = ["arrow"]

[[bin]]
name = "count_paths"
required-features = ["arrow"]

[package.metadata.docs.rs]
all-features = true
